Changed fb link , fixed some bugs on mobile devices

--- a/static/app/sass/question/__title/question__title.sass
+++ b/static/app/sass/question/__title/question__title.sass
@@ -14,9 +14,11 @@
 		height: 16px
 		width: 2px
 		left: -37px
-		top: 3px
+		top: 0
 		background-color: #280244
 		transition: all .5s ease
+		@media(max-width: 768px)
+			left: 10px !important
 	&:after
 		content: ''
 		position: absolute
@@ -24,11 +26,14 @@
 		height: 16px
 		width: 2px
 		left: -37px
-		top: 3px
+		top: 0
 		background-color: #280244
 		transform: rotate(90deg)
 		transition: all .5s ease
+		@media(max-width: 768px)
+			left: 10px !important
 	@media(max-width: 768px)
+		padding-left: 40px
 		font-size: 16px
 		&:before
 			left: -35px
